--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,34 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node / Next.js
+node_modules
+.next
+out
+dist
+build
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
-.env*.local
+# Env
 .env
+.env.local
+.env.*.local
 
-# vercel
-.vercel
+# OS
+.DS_Store
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Java / Gradle
+.gradle/
+build/
+target/
+*.class
+*.log
+*.jar
+*.war
+*.iml
+/.idea
+
+# Docker
+*.pid
