--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "packageManager": "pnpm@9",
   "scripts": {
-    "dev": "concurrently -n api,web -c auto \"cd apps/api && gradle bootRun\" \"pnpm --dir apps/web dev\"",
-    "build": "pnpm --dir apps/web build && cd apps/api && gradle bootJar",
+    "dev": "concurrently -n api,web -c auto \"mvn -q -f apps/api/pom.xml spring-boot:run\" \"pnpm --dir apps/web dev\"",
+    "build": "pnpm --dir apps/web build && mvn -q -f apps/api/pom.xml -DskipTests package",
     "start:web": "pnpm --dir apps/web start",
     "format": "prettier --write .",
     "lint": "pnpm --dir apps/web lint",
