--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
-version: '3.9'
 services:
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: app
+      POSTGRES_DB: app
+    ports:
+      - 5432:5432
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
   api:
-    build: ./apps/api
+    build:
+      context: ./apps/api
     environment:
       SERVER_PORT: 8080
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/app
@@ -10,34 +21,18 @@ services:
     depends_on:
       - db
     ports:
-      - "8080:8080"
+      - 8080:8080
 
   web:
-    build: ./apps/web
+    build:
+      context: ./apps/web
     environment:
       NEXT_PUBLIC_API_URL: http://api:8080
       PORT: 3000
     depends_on:
       - api
     ports:
-      - "3000:3000"
+      - 3000:3000
 
-  # Uncomment if you need Postgres
-  db:
-    image: postgres:16
-  #   environment:
-      environment:
-      POSTGRES_USER: app
-        POSTGRES_PASSWORD: app
-        POSTGRES_DB: app
-  #   ports:
-      ports:
-      - "5432:5432"
-  #   volumes:
-      volumes:
-      - db_data:/var/lib/postgresql/data
-
-# volumes:
-#   db_data:
 volumes:
   db_data:
